<resources>
    <string name="app_name">Face Mask Detection</string>
    <string name="predict">Predict</string>
    <string name="live">Live</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_photo">Select Photo</string>
    <string name="prediction">Prediction</string>
    <string name="close">CLOSE</string>
    <string name="name">Nhận dạng người đeo khẩu trang</string>
</resources>