<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:padding="10dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/photoImageView"
                android:layout_width="match_parent"
                android:layout_height="438dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_above="@+id/layoutPre"
        android:orientation="horizontal">

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutPre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/btnPredict"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_predict"
            android:text="@string/predict"
            android:textSize="25dp"
            android:textColor="#ffffff"
            android:textAllCaps="false" />
    </LinearLayout>

    <Button
        android:id="@+id/goLive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="86dp"
        android:background="@drawable/button_botron"
        android:text="@string/live"
        android:textAllCaps="false"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/cameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="86dp"
        android:background="@drawable/button_botron"
        android:text="@string/take_photo"
        android:textAllCaps="false"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/galleryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="86dp"
        android:background="@drawable/button_botron"
        android:text="@string/select_photo"
        android:textAllCaps="false"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="152dp"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="#396157"
        android:textSize="24dp"
        android:textStyle="bold" />
</RelativeLayout>